Fix: Resolve complex Settings window regression
This commit resolves a significant regression where the Settings window would fail to open from the popover. The root cause was a subtle context issue between the app's main scene and the menu bar extra's popover.

After several incorrect attempts, the final solution uses the modern @Environment openSettings action, which correctly handles the context switch and is the canonical SwiftUI solution for this problem. This was a particularly challenging bug to diagnose and fix.

--- a/syncthingStatus/Info.plist
+++ b/syncthingStatus/Info.plist
@@ -9,5 +9,10 @@
 	</dict>
 	<key>NSUserNotificationAlertStyle</key>
 	<string>alert</string>
+	<key>SMLoginItem</key>
+	<dict>
+		<key>Enabled</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
