chore: Remove signing docs from repo, add to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,4 @@ iOSInjectionProject/
 
 # Apple Developer Program License Agreement
 Apple_Developer_Program_License_Agreement*.pdf
+SPARKLE-SIGNING.md
